Dark styling implemented

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Descubra nuestros productos para facturación electrónica."
+      content="Le ofrecemos nuestra plataforma para facturación electrónica para agilizar su proceso. Facture desde su computador o dispositivo móvil con una interfaz moderna y sencilla de utilizar."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
