--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="src/assets/logo.png" />
+    <link href="https://fonts.cdnfonts.com/css/exo-2" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/russo-one" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JLCSolutionsCR - Facturación</title>
   </head>
