--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.cdnfonts.com">
     <link rel="icon" type="image/png" href="src/assets/logo.png" />
-    <link href="https://fonts.cdnfonts.com/css/exo-2" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/russo-one" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JLCSolutionsCR - Facturación</title>
   </head>
